styles.css
body {
    background-color: #ffffff;
    margin: 0px;
}

@media screen and (orientation: portrait) {
    .links {
        width: 90%;
        height: 50px;
        padding-left: 5%;
        position: absolute;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .title {
        padding-top: 30vh;
        width: 70%;
        position: absolute;
        z-index: -1;
        display: block;
    }
    .image {
        padding-left: 5%;
        width: 90%;
        padding-top: 100px;
        display: block;
    }
    .project {
        width: 100%;
        padding-top: 50px;
        display: block;
    }
    .download {
        left: 85%;
        top: 69%;
        width: 2.5%;
        display: block;
        position: absolute;
    }
    .footer {
        padding-top: 100px;
        padding-left: 5%;
        padding-bottom: 50px;
        width: 90%;
        display: block;
    }
}

@media screen and (orientation: landscape) {
    .links {
        width: 68%;
        height: 50px;
        padding-left: 16%;
        position: absolute;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .title {
        padding-top: 30vh;
        width: 45%;
        position: absolute;
        z-index: -1;
        display: block;
    }
    .image {
        padding-left: 16%;
        width: 68%;
        padding-top: 100px;
        display: block;
    }
    .project {
        padding-left: 10%;
        width: 80%;
        padding-top: 50px;
        display: block;
    }
    .download {
        left: 78%;
        top: 69%;
        width: 2.5%;
        display: block;
        position: absolute;
    }
    .footer {
        padding-top: 100px;
        padding-left: 16%;
        padding-bottom: 50px;
        width: 68%;
        display: block;
    }
}

.menu {
    position: fixed;
    width: 100%;
    z-index: 1;
    display: block;
}

.menuBlur {
    height: 50px;
    width: 100%;
    backdrop-filter: blur(25px);
    -webkit-backdrop-filter: blur(25px);
    position: absolute;
    display: block;
}

.menuBackground {
    opacity: 0.5;
    height: 50px;
    width: 100%;
    background-color: #ffffff;
    position: absolute;
    display: block;
}

.link {
    height: 18px;
    display: block;
}

.more {
    display: grid;
    grid-auto-flow: column;
    grid-column-gap: 30px;
}

.buffer {
    padding-top: 50px;
    display: block;
}

.menuStroke {
    height: 1px;
    width: 100%;
    opacity: 0.2;
    background-color: #000000;
    display: block;
}

.header {
    width: 100%;
    height: 100vh;
    position: relative;
    display: flex;
    align-items: flex-start;
    justify-content: center;
}

.scroll {
    width: 50px;
    align-self: flex-end;
    padding-bottom: 30px;
    position: absolute;
    z-index: -1;
    display: block;
}

.background {
    width: 100%;
    height: 100vh;
    object-fit: cover;
    position: absolute;
    z-index: -2;
    display: block;
}

.projects {
    padding-bottom: 100px;
    display: block;
}

.projectContainer {
    display: block;
    position: relative;
}

.footerContainer {
    background-color: #f5f5f5;
    width: 100%;
    position: relative;
}

.email {
    left: 40%;
    top: 56%;
    width: 20%;
    display: block;
    position: absolute;
}

